--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,6 +73,7 @@ urlencoding = "2.1.3"
 
 # runebeta
 diesel = { version = "2.1", features = ["postgres", "uuid", "serde_json", "numeric"] }
+diesel_migrations = { version = "2.1" }
 bigdecimal =  { version = "0.4.3", features = ["serde"] }
 deadpool-diesel = { version = "0.4", features = ["postgres"] }
 dotenvy = "0.15"
