--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,7 +72,7 @@ tower-http = { version = "0.4.0", features = ["auth", "compression-br", "compres
 urlencoding = "2.1.3"
 
 # runebeta
-diesel = { version = "2.1", features = ["postgres", "uuid", "serde_json", "numeric", "r2d2"] }
+diesel = { version = "2.1", features = ["chrono", "postgres", "uuid", "serde_json", "numeric", "r2d2"] }
 diesel_migrations = { version = "2.1" }
 bigdecimal =  { version = "0.4.3", features = ["serde"] }
 deadpool-diesel = { version = "0.4", features = ["postgres"] }
